[package]
name = "xgboost"
version = "0.2.0"
authors = ["Dave Challis <dave@suicas.net>"]
license = "MIT"
repository = "https://github.com/davechallis/rust-xgboost"
homepage = "https://github.com/davechallis/rust-xgboost"
description = "Machine learning using XGBoost"
documentation = "https://docs.rs/xgboost"
readme = "README.md"
edition = "2021"

[dependencies]
xgboost-sys = { path = "xgboost-sys" }
libc = "0.2"
derive_builder = "0.20"
log = "0.4"
tempfile = "3.15"
indexmap = "2.7"

[features]
cuda = ["xgboost-sys/cuda"]
